--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,55 @@
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100..900&family=Liu+Jian+Mao+Cao&family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Bai Jamjuree";
+  overflow-x: hidden;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  border-radius: 12px;
+  border: #0f0f0f;
+  color: white;
+  border-style: solid;
+  border-width: 1.8px;
+  font-size: 30px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.button:hover {
+  background-color: white;
+  color: orange;
+}
+
+.buttonOutline {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  border-radius: 12px;
+  border: #f9f9f9;
+  color: white;
+  border-style: solid;
+  border-width: 1.8px;
+  font-size: 30px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.buttonOutline:hover {
+  background-color: white;
+  color: orange;
+}
